# mail2wordpress

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go
cmd/: BUILD.bazel  root.go
pkg/playlist/: BUILD.bazel  converter.go  converter_test.go  playlist.go
pkg/server/: BUILD.bazel  serve.go
pkg/spotify/: BUILD.bazel  playlist.go  spotify.go  spotify_test.go
pkg/types/: BUILD.bazel  types.go
pkg/wordpress/: BUILD.bazel  wordpress.go  wordpress_test.go
